RESOLVED FIXED 261278
[IFC][Invalidation] Content inside SVG should not be considered part of IFC content
https://bugs.webkit.org/show_bug.cgi?id=261278
Summary [IFC][Invalidation] Content inside SVG should not be considered part of IFC c...
alan
Reported 2023-09-07 08:25:01 PDT
Attachments
[fast-cq]Patch (3.30 KB, patch)
2023-09-07 08:29 PDT, alan
no flags
alan
Comment 1 2023-09-07 08:29:11 PDT
Created attachment 467587 [details] [fast-cq]Patch
EWS
Comment 2 2023-09-07 09:37:35 PDT
Committed 267737@main (2f339259fbc5): <https://commits.webkit.org/267737@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467587 [details].
Note You need to log in before you can comment on or make changes to this bug.