[IFC][Invalidation] Content inside SVG should not be considered part of IFC content https://bugs.webkit.org/show_bug.cgi?id=261278 <rdar://114700736>

Reviewed by Antti Koivisto.

The containing block logic skips (inline) SVG root and comes back for content _inside_ SVG with a renderer that's also an IFC root.

* LayoutTests/fast/inline/invalidation-crash-when-svg-is-present-expected.txt: Added.
* LayoutTests/fast/inline/invalidation-crash-when-svg-is-present.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::containing):

Canonical link: https://commits.webkit.org/267737@main